# textual-snapshots

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONSUMER_ANALYSIS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  SECURITY.md  dev.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
PRPs/: interaction-validation-enhancement.md
examples/: README.md  basic_capture.py  plugin_example.py  responsive_demo.py  validation_demo.py
src/textual_snapshots/: __init__.py  capture.py  cli.py  comparison.py  conversion.py  detection.py  interactions.py  plugins.py  quality.py  types.py  utils.py  validation.py
tests/: conftest.py
tests/unit/: test_capture_core.py  test_conversion.py  test_detection.py  test_interactions.py  test_plugins.py  test_validation.py
